--- a/Views/Interactions/ThreatInteractionWindow.xaml
+++ b/Views/Interactions/ThreatInteractionWindow.xaml
@@ -419,7 +419,7 @@
 
 				<Border Style="{StaticResource callout}" Margin="0,10,0,0">
 					<StackPanel>
-						<TextBlock Text="When All Threats Have Been Defeated, Fire This Trigger (Optional):" Style="{StaticResource Heading}"/>
+						<TextBlock Text="When All Enemies (Scripted and Pool) Have Been Defeated, Fire This Trigger (Optional):" Style="{StaticResource Heading}"/>
 						<StackPanel Orientation="Horizontal">
 							<ComboBox VerticalAlignment="Center" HorizontalAlignment="Left" Width="250" ItemsSource="{Binding scenario.triggersObserver}" DisplayMemberPath="dataName" SelectedValue="{Binding interaction.triggerDefeatedName}" SelectedValuePath="dataName"/>
 							<Button x:Name="addDefeatedTriggerButton" Background="MediumSeaGreen" Margin="10,0" Height="32" Width="32" Click="addDefeatedTriggerButton_Click">
